--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
         <div class="col-lg-6">
-          <img class="img-fluid" src="imgs/hand2.png" alt="">
+          <img class="img-fluid" src="hand2.png" alt="">
         </div>
       </div>
       </div>  
