--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-1-md">
-          <img src="imgs/milk.png" class="img-fluid">
+          <img src="milk.png" class="img-fluid">
           </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
           <h2>MUSEUM OF CANDY</h2>
-          <img src="imgs/lolli_icon.png" class="d-none d-lg-inline">
+          <img src="lolli_icon.png" class="d-none d-lg-inline">
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -92,7 +92,7 @@
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
           <h2>MUSEUM OF CANDY</h2>
-          <img src="imgs/lolli_icon.png" class="d-none d-lg-inline">
+          <img src="lolli_icon.png" class="d-none d-lg-inline">
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -104,18 +104,18 @@
           </div>
         </div>
                 <div class="col-md-6">
-          <img src="imgs/gumball.png" class="img-fluid">
+          <img src="gumball.png" class="img-fluid">
           </div>
       </div>
             <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-1-md">
-          <img src="imgs/sprinkles.png" class="img-fluid">
+          <img src="sprinkles.png" class="img-fluid">
           </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
           <h2>MUSEUM OF CANDY</h2>
-          <img src="imgs/lolli_icon.png" class="d-none d-lg-inline">
+          <img src="lolli_icon.png" class="d-none d-lg-inline">
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
